--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,24 @@
+---
+name: Egg-Plugin-Net-Ping
+version: 2.02
+author:
+  - 'Masatoshi Mizuno E<lt>lusheE<64>cpan.orgE<gt>'
 abstract: Net::Ping for Egg plugin.
-author: Masatoshi Mizuno E<lt>lusheE<64>cpan.orgE<gt>
-build_requires: 
+license: perl
+resources:
+  license: http://dev.perl.org/licenses/
+requires:
+  Egg::Release: 2
+  Net::Ping: 2.31
+  Test::More: 0
   Test::Perl::Critic: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
-  Test::Simple: 0
-distribution_type: module
-generated_by: Module::Install version 0.64
-license: perl
-name: Egg-Plugin-Net-Ping
-no_index: 
-  directory: 
-    - inc
-    - t
-requires: 
-  Egg::Release: 2
-  Net::Ping: 2.31
-version: 2.01
+provides:
+  Egg::Plugin::Net::Ping:
+    file: lib/Egg/Plugin/Net/Ping.pm
+    version: 2.02
+generated_by: Module::Build version 0.2805
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
